# pipe

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Setup.sh  vcpkg.json
.github/workflows/: build.yml  cicd.yml  linux-cicd.yml  macos-cicd.yml  periodic-format.yml  publish-release.yml  window-cicd.yml  windows-cicd.yml
Benchmarks/: Arenas.bench.h  CMakeLists.txt  Lookups.bench.h  main.cpp  nanobench.h
CMake/: FindASan.cmake  FindMSan.cmake  FindSanitizers.cmake  FindTSan.cmake  FindUBSan.cmake  LinkTimeOptimization.cmake  SanitizeHelpers.cmake  Util.cmake
Docs/: PipeColor.md  PipeECS.md  PipeMath.md
Docs/.obsidian/: app.json  core-plugins.json  workspace.json
Include/: Context.h  CoreEngine.h  CoreObject.h  CoreTypes.h  Export.h  Log.h  PCH.h  Pipe.h  PipeAlgorithms.h  PipeArrays.h  PipeArraysFwd.h  PipeColor.h  PipeContainers.h  PipeContainersFwd.h  PipeECS.h  PipeECSFwd.h  PipeFiles.h  PipeMath.h  PipeMemory.h  PipeMemoryArenas.h  PipeNewDelete.h  PipePlatform.h  PipeReflect.h  PipeSerialize.h  PipeSerializeFwd.h  PipeTime.h  PipeVectors.h  Profiler.h  Tasks.h  TypeTraits.h
Include/Assets/: AssetData.h  AssetInfo.h  AssetIterator.h  AssetManager.h  AssetPtr.h
Include/Containers/: Array.h  ArrayView.h  BitArray.h  Map.h  Set.h  Span.h  Tuples.h
Include/Core/: Array.h  BitArray.h  Broadcast.h  Char.h  Checks.h  Chrono.h  Context.h  Crc.h  EnumFlags.h  EventHandle.h  FixedString.h  Function.h  Guid.h  Hash.h  Heap.h  Less.h  Log.h  Macros.h  Map.h  Name.h  Platform.h  PlatformMisc.h  PlatformProcess.h  Regex.h  Search.h  Set.h  Sorting.h  Span.h  String.h  StringView.h  TypeTraits.h  Utility.h
Include/ECS/: Access.h  Context.h  Filtering.h  Id.h  IdRegistry.h  Pool.h  SparseSet.h
Include/Events/: Broadcast.h  EventHandle.h  Function.h
Include/Files/: FileDialog.h  FileSystem.h  FileWatcher.h  Files.h  FormatFileIterator.h  Paths.h  STDFileSystem.h  Watcher.h
Include/Math/: Bezier.h  Color.h  DateTime.h  FrameTime.h  Heap.h  Math.h  Matrix.h  Quaternion.h  Rotator.h  Search.h  Sorting.h  Time.h  Timespan.h  Transform.h  Vector.h
Include/Memory/: Alloc.h  Allocator.h  LinearAllocator.h  Override.h  OwnPtr.h  PtrBuilder.h  STLAllocator.h  UniquePtr.h
Include/Misc/: Char.h  Checks.h  Chrono.h  Crc.h  DateTime.h  EnumFlags.h  Guid.h  Hash.h  Optional.h  PipeDebug.h  PipeImGui.h  Time.h  Timespan.h  Utility.h
Include/Object/: BaseObject.h  BaseStruct.h  Object.h  ObjectBuilder.h  Struct.h
Include/PCore/: Array.h  BitArray.h  Broadcast.h  Char.h  Checks.h  Chrono.h  Context.h  Crc.h  EnumFlags.h  EventHandle.h  FixedString.h  Function.h  Greater.h  Guid.h  Hash.h  Heap.h  Less.h  Log.h  Map.h  Name.h  Optional.h  Platform.h  PlatformMisc.h  PlatformProcess.h  Profiler.h  Regex.h  Search.h  Set.h  Sorting.h  Span.h  String.h  StringView.h  TypeTraits.h
Include/PECS/: Access.h  Context.h  Filtering.h  Id.h  IdRegistry.h  Pool.h  SparseSet.h
Include/PFiles/: FileDialog.h  FileWatcher.h  Files.h  FormatFileIterator.h  Paths.h  STDFileSystem.h
Include/PMath/: Bezier.h  Color.h  DateTime.h  FrameTime.h  Math.h  Quaternion.h  Rotator.h  Timespan.h  Vector.h
Include/PRefl/: ArrayProperty.h  BaseClass.h  BaseStruct.h  Class.h  ClassPtrBuilder.h  ClassType.h  CoreTypes.h  DataType.h  EnumType.h  GetType.h  HasType.h  NativeType.h  Property.h  Reflection.h  ReflectionFlags.h  ReflectionTraits.h  Registry.h  Struct.h  StructType.h  Type.h  TypeFlags.h  TypeId.h  TypeName.h
Include/PSerl/: ReadWriter.h  Reader.h  Serialization.h  SerializationTypes.h  Writer.h
Include/Pipe/: Export.h  Pipe.h  PipeArrays.h  PipeContainers.h  PipeECS.h  PipeECSFwd.h
Include/Platform/: GenericPlatform.h  Macros.h  Platform.h  PlatformMisc.h  PlatformProcess.h  PlatformTime.h
Include/Pointers/: PtrBuilder.h  PtrOwner.h
Include/Reflection/: ArrayProperty.h  BaseClass.h  BaseStruct.h  Class.h  ClassPtrBuilder.h  ClassTraits.h  ClassType.h  CoreTypes.h  DataType.h  EnumType.h  GetType.h  HasType.h  Helpers.h  Macros.h  NativeType.h  PredefinedTypes.h  Property.h  Reflection.h  ReflectionFlags.h  ReflectionMacros.h  ReflectionRegistry.h  ReflectionTags.h  ReflectionTraits.h  ReflectionTypeTraits.h  Registry.h  Struct.h  StructType.h  TClass.h  TProperty.h  TStruct.h  Type.h  TypeFlags.h  TypeId.h  TypeName.h
Include/Serialization/: Archive.h  CommonContext.h  Contexts.h  ContextsFwd.h  Format_Json.h  IFormat.h  Json.h  JsonArchive.h  NestedArchive.h  ReadContext.h  ReadWriter.h  Reader.h  Serialization.h  SerializationFwd.h  SerializationTypes.h  WriteContext.h  Writer.h
Include/Strings/: FixedString.h  Name.h  Regex.h  String.h  StringView.h
Include/Templates/: Greater.h  Less.h  (+3 more)
Src/: Context.cpp  Log.cpp  Pipe.cpp  PipeAlgorithms.cpp  PipeArrays.cpp  PipeContainers.cpp  PipeECS.cpp  PipeFiles.cpp  PipeMath.cpp  PipeMemory.cpp  PipeMemoryArenas.cpp  PipeModule.cpp  PipePlatform.cpp  PipeReflect.cpp  PipeSerialize.cpp  PipeTime.cpp  PipeVectors.cpp  Tasks.cpp
Tests/: CMakeLists.txt  Math.spec.cpp  Object.spec.cpp  OwnPtr.spec.cpp  PtrOwner.spec.cpp  Time.spec.cpp  main.cpp
Tests/Containers/: Array.spec.cpp  Arrays.spec.cpp  InlineArray.spec.cpp  Set.spec.cpp
Tests/Core/: Array.spec.cpp  Function.spec.cpp  OwnPtr.spec.cpp  PageBuffer.spec.cpp  PlatformProcess.spec.cpp  Set.spec.cpp  String.spec.cpp  StringView.spec.cpp  Tag.spec.cpp
Tests/ECS/: Access.spec.cpp  Components.spec.cpp  ECS.spec.cpp  Filtering.spec.cpp  Hierarchy.spec.cpp  IdRegistry.spec.cpp  IdScopes.spec.cpp  PageBuffer.spec.cpp  Statics.spec.cpp
Tests/Events/: Function.spec.cpp
Tests/Files/: Paths.spec.cpp
Tests/Math/: Color.spec.cpp  Math.spec.cpp  Vector.spec.cpp
Tests/Memory/: BestFitArena.spec.cpp  BigBestFitArena.spec.cpp  LinearAllocator.spec.cpp  LinearArena.spec.cpp  Memory.spec.cpp  MemoryStats.spec.cpp  MonoLinearArena.spec.cpp  Override.spec.cpp
Tests/Reflection/: MacroReflection.spec.cpp  Object.spec.cpp  Traits.spec.cpp  TypeId.spec.cpp  TypeName.spec.cpp
Tests/Serialization/: Binary.spec.cpp  Json.spec.cpp  Serialization.spec.cpp
(+494 files in other folders)
